adding a semi working google drive service

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         .catch(err => console.log('Error', err));
     }
   </script>-->
+  
 
   <link href="build/main.css" rel="stylesheet">
 
@@ -37,5 +38,9 @@
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
+
 </body>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+
+
 </html>
